# college

./: .gitignore  README.md  index.html  pyproject.toml
scripts/: eval_gre.py  eval_oxford.py  eval_twitter.py  train_with_llama.py
src/college/: __init__.py  arguments.py  checkpoints.py  configs.py  generation.py  modeling_llama.py  outputs.py  train_with_llama.py  utils.py
src/college/evaluation/: __init__.py  common.py  gre.py  oxford.py  twitter.py
